force-app/main/default/objects/Socio_de_candidato__c/Socio_de_candidato__c.object-meta.xml
<CustomObject>
    <description>Representa los socios de PRIMAGAS que colaboran en la cualificación de un candidato, relaciona cuentas de tipo “Socio” y candidatos.</description>
    <label>Partner de candidato</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners de candidato</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>