force-app/main/default/objects/Socio_de_candidato__c/fields/Candidato__c.field-meta.xml
<CustomField>
    <fullName>Candidato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidato</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Socios_de_candidato</relationshipName>
    <type>Lookup</type>
</CustomField>