force-app/main/default/objects/Socio_de_candidato__c/fields/Funcion__c.field-meta.xml
<CustomField>
    <fullName>Funcion__c</fullName>
    <label>Función</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Ingeniería</fullName>
            </value>
            <value>
                <fullName>Instalador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>