force-app/main/default/objects/Socio_de_candidato__c/fields/Socio__c.field-meta.xml
<CustomField>
    <fullName>Socio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Debe ser una cuenta de tipo Partner.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Socios_de_candidato</relationshipName>
    <type>Lookup</type>
</CustomField>