force-app/main/default/objects/Socio_de_candidato__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Socio__c</columns>
    <columns>Funcion__c</columns>
    <columns>Candidato__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
    <language>es</language>
</ListView>